--- a/public/auth_config.json
+++ b/public/auth_config.json
@@ -1,5 +1,5 @@
 {
-  "domain": "dev-scgobwdm.us.auth0.com",
-  "clientId": "mLl3FvE2R77d3bupsCFaXKZrX9Rerk3O",
+  "domain": "dev-u68-wk5a.us.auth0.com",
+  "clientId": "MKfCztt7KpBRTNuPc6rTjWPq9UInyd5I",
   "audience": "https://example.nekoruri.jp/"
 }
